# redPD

./: .gitignore  .polyscope.ini  CMakeLists.txt  L2_errorMeasurs.py  LBSerrorsVal.csv  LICENSE  PODerrorsVal.csv  README.md  README.test.md  SPLOCSerrorsVal.csv  _README.txt  imgui.ini
include/: ProjDynConstraints.h  ProjDynMeshSampler.h  ProjDynRHSInterpol.h  ProjDynSimulator.h  ProjDynTypeDef.h  ProjDynUtil.h  STVD.h
include/glad/: glad.h
src/: ProjDynConstraints.cpp  ProjDynMeshSampler.cpp  ProjDynRHSInterpol.cpp  ProjDynSimulator.cpp  ProjDynUtil.cpp  doubleHRPD.cpp  glad.c  main.cpp
